--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,53 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.7.0/tachyons.css">
-		<title>Dreamforce 2018 is the best</title>
-	</head>
-	<body>
-		<div class="vh-100 w-100 flex justify-center">
-			<div class="flex flex-column items-center justify-center">
-				<h2 class="fw4 blue">Panorama Trail!</h2>
-				<p class="silver ma0">Running with Heroku Flow</p>
-				<div class="pt5">
-					<span id="env" class="white pv1 ph2 br-pill bg-light-blue"></span>
-				</div>
-			</div>
-		</div>
-
-		<script>
-			var env = "<%= env %>";
-			document.getElementById("env").innerHTML = env;
-		</script>
-	</body>
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js no-pass-type ie6 oldie" id="unsupported" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js no-pass-type ie7 oldie" id="unsupported" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js no-pass-type ie8 oldie" id="unsupported" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if IE 9]>    <html class="no-js no-pass-type ie9" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
+<head>
+<title>Dirty Look</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta charset="UTF-8" />
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
+<meta name="google-site-verification" content="2q8u-0_6HxJZdS7l7LYlf-WDEYwIPvdJ_XVujkTFNCY" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="profile" href="https://gmpg.org/xfn/11" />
+<link rel="dns-prefetch" href="//d16cvnquvjw7pr.cloudfront.net">
+<link rel="dns-prefetch" href="//ajax.googleapis.com">
+<link rel="shortcut icon" href="dirtylook_ico.ico" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/images/logos/dirtylook144.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/images/logos/dirtylook114.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/images/logos/dirtylook72.png">
+<link rel="apple-touch-icon-precomposed" href="/assets/images/logos/dirtylook57.png">
+<meta property="og:image" content="/assets/images/dirtylook-default-placeholder.jpg" />
+<meta category="og:category" content="" />
+<meta name="description" content="A band in San Francisco." />
+<link rel="canonical" href="http://www.dirtylook.com/" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Dirty Look" />
+<meta property="og:description" content="A band in San Francisco" />
+<meta property="og:url" content="http://www.dirtylook.com/" />
+<meta property="og:site_name" content="Dirty Look" />
+<link rel='dns-prefetch' href='//s.w.org' />
+<meta name="twitter:card" value="summary" />
+<meta name="twitter:url" value="http://www.dirtylook.com/" />
+<meta name="twitter:title" value="Dirty Look" />
+<meta name="twitter:description" value="A band in San Francisco." />
+<meta name="twitter:image" value="/assets/images/twitter-dirtylook.jpg" />
+<meta name="twitter:site" value="@dirtylook" />
+<link rel="alternate" hreflang="x-default" href="http://www.dirtylook.com/" />
+<link href="stylesheet/fastui.css" media="all" rel="stylesheet" type="text/css" />
+<link href="stylesheet/styles.css" media="all" rel="stylesheet" type="text/css" />
+</head>
+<body data-useragent class="lang-en responsive " lang="en-US">
+	<header>
+		<h1><img width="200px" src="dirtylook_logo.jpg"/></h1>
+		<p>A band in San Francisco</p>
+		<p><iframe width="560" height="315" src="https://www.youtube.com/embed/OlZSccFX7AE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+		<p>@ <a href="https://www.facebook.com/events/632036117270544/">Milk Bar SF July 24 2019 09:00PM</a> </p>
+	</header>
+	<footer></footer>
+	<script src="dirtylook.js"></script>
+</body>
 </html>
