image and styles

--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,40 @@
 <link rel="alternate" hreflang="x-default" href="http://www.dirtylook.com/" />
 <link href="stylesheet/fastui.css" media="all" rel="stylesheet" type="text/css" />
 <link href="stylesheet/styles.css" media="all" rel="stylesheet" type="text/css" />
+<style>
+html {
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+h1 img {
+  margin: 5% auto 50px;
+  display: block;
+}
+
+p {
+  text-align: center;
+}
+
+a,
+a:active,
+a:hover,
+a:focus,
+a:focus-within,
+a:visited,
+a:-webkit-any-link,
+a:-webkit-any-link:active,
+a:-webkit-any-link:hover,
+a:-webkit-any-link:focus,
+a:-webkit-any-link:focus-within,
+a:-webkit-any-link:visited {
+  color: #AB1923;
+}
+</style>
 </head>
 <body data-useragent class="lang-en responsive " lang="en-US">
 	<header>
-		<h1><img width="200px" src="dirtylook_logo.jpg"/></h1>
+		<h1><img width="200px" src="https://i.imgur.com/J6TFvA3l.jpg"/></h1>
 		<p>A band in San Francisco</p>
 		<p><iframe width="560" height="315" src="https://www.youtube.com/embed/OlZSccFX7AE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 		<p>@ <a href="https://www.facebook.com/events/632036117270544/">Milk Bar SF July 24 2019 09:00PM</a> </p>
