--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,15 @@
 <link rel="profile" href="https://gmpg.org/xfn/11" />
 <link rel="dns-prefetch" href="//d16cvnquvjw7pr.cloudfront.net">
 <link rel="dns-prefetch" href="//ajax.googleapis.com">
-<link rel="shortcut icon" href="dirtylook_ico.ico" />
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/images/logos/dirtylook144.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/images/logos/dirtylook114.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/images/logos/dirtylook72.png">
-<link rel="apple-touch-icon-precomposed" href="/assets/images/logos/dirtylook57.png">
-<meta property="og:image" content="/assets/images/dirtylook-default-placeholder.jpg" />
+<link rel="shortcut icon" href="https://d2ddoduugvun08.cloudfront.net/items/2z3e2m27022W2C2Z0q2p/dirtylook_ico.ico" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<link rel="apple-touch-icon-precomposed" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<meta property="og:image" content="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg" />
 <meta category="og:category" content="" />
 <meta name="description" content="A band in San Francisco." />
-<link rel="canonical" href="http://www.dirtylook.com/" />
+<link rel="canonical" href="http://www.dirtylooksf.com/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Dirty Look" />
@@ -34,7 +34,7 @@
 <meta name="twitter:url" value="http://www.dirtylook.com/" />
 <meta name="twitter:title" value="Dirty Look" />
 <meta name="twitter:description" value="A band in San Francisco." />
-<meta name="twitter:image" value="/assets/images/twitter-dirtylook.jpg" />
+<meta name="twitter:image" value="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg" />
 <meta name="twitter:site" value="@dirtylook" />
 <link rel="alternate" hreflang="x-default" href="http://www.dirtylook.com/" />
 <link href="stylesheet/fastui.css" media="all" rel="stylesheet" type="text/css" />
@@ -72,7 +72,7 @@ a:-webkit-any-link:visited {
 </head>
 <body data-useragent class="lang-en responsive " lang="en-US">
 	<header>
-		<h1><img width="200px" src="https://i.imgur.com/J6TFvA3l.jpg"/></h1>
+		<h1><img width="200px" src="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg"/></h1>
 		<p>A band in San Francisco</p>
 		<p><iframe width="560" height="315" src="https://www.youtube.com/embed/OlZSccFX7AE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 		<p>@ <a href="https://www.facebook.com/events/632036117270544/">Milk Bar SF July 24 2019 09:00PM</a> </p>
