--- a/public/index.html
+++ b/public/index.html
@@ -50,12 +50,12 @@ h1 img {
 }
 p {
   text-align: center;
-  margin: 0 auto;
 }
 p.video {
   width: 560px;
   height: 315px; 
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 a,
 a:active,
@@ -73,8 +73,8 @@ a:-webkit-any-link:visited {
 }
 @media only screen and (max-width: 600px) {
   p.video {
-    width: 260px;
-    height: 15px; 
+    width: 224px;
+    height: 126px; 
   }
 }
 </style>
