a few more pages

--- a/public/live.html
+++ b/public/live.html
@@ -5,7 +5,7 @@
 <!--[if IE 9]>    <html class="no-js no-pass-type ie9" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
 <head>
-<title>Dirty Look</title>
+<title>Dirty Look | Live</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta charset="UTF-8" />
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
@@ -19,15 +19,15 @@
 <meta property="og:image" content="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg" />
 <meta category="og:category" content="" />
 <meta name="description" content="A band in San Francisco." />
-<link rel="canonical" href="http://www.dirtylooksf.com/" />
+<link rel="canonical" href="http://www.dirtylooksf.com/live" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Dirty Look" />
+<meta property="og:title" content="Dirty Look | Live" />
 <meta property="og:description" content="A band in San Francisco" />
-<meta property="og:url" content="http://www.dirtylooksf.com/" />
-<meta property="og:site_name" content="Dirty Look" />
+<meta property="og:url" content="http://www.dirtylooksf.com/live" />
+<meta property="og:site_name" content="Dirty Look | Live" />
 <link rel='dns-prefetch' href='//s.w.org' />
-<link rel="alternate" hreflang="x-default" href="http://www.dirtylooksf.com/" />
+<link rel="alternate" hreflang="x-default" href="http://www.dirtylooksf.com/live" />
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
 <style>
 html {
@@ -46,7 +46,7 @@ h1 {
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position: top center;
-  height: 100%;
+  height: 400px;
   margin: 0 auto;
   display: block;
   text-indent: -9999px;
@@ -103,6 +103,12 @@ a.nope {
   -o-animation:      look-a-distraction 2s infinite; /* Opera 12+ */
   animation:         look-a-distraction 2s infinite; /* IE 10+, Fx 29+ */
 }
+p.contents {
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto 20px;
+}
 </style>
 </head>
 <body data-useragent class="lang-en responsive " lang="en-US">
@@ -114,6 +120,8 @@ a.nope {
         <li class="pure-menu-item"><a href="/live" class="pure-menu-link link-animate">LIVE</a></li>
     </ul>
   </div>
+  <p class="contents">@ <a href="https://www.facebook.com/events/632036117270544/">Milk Bar SF July 24 2019 09:00PM</a><br/>
+  <img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/0u3s2A160q2d0N2l0D0x/66436182_637645960042893_825150701750452224_n.png?X-CloudApp-Visitor-Id=2634976"/></p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
