--- a/public/live.html
+++ b/public/live.html
@@ -120,8 +120,9 @@ p.contents {
         <li class="pure-menu-item"><a href="/live" class="pure-menu-link link-animate">LIVE</a></li>
     </ul>
   </div>
-  <p class="contents">@ <a href="https://www.facebook.com/events/632036117270544/">Milk Bar SF July 24 2019 09:00PM</a><br/>
-  <img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/0u3s2A160q2d0N2l0D0x/66436182_637645960042893_825150701750452224_n.png?X-CloudApp-Visitor-Id=2634976"/></p>
+  <p class="contents">
+    <img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/442K431m1n270f2v4043/dirtylookposter@2x.png"/>
+    <br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/0u3s2A160q2d0N2l0D0x/66436182_637645960042893_825150701750452224_n.png?X-CloudApp-Visitor-Id=2634976"/><br/>@ <a href="https://www.facebook.com/events/632036117270544/">Milk Bar SF July 24 2019 09:00PM</a></p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
