--- a/public/look.html
+++ b/public/look.html
@@ -10,6 +10,7 @@
 <meta charset="UTF-8" />
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="ozGOEGTko4G8SKQHeYWScmjc6zAgERd6DQKDc1x4c1U" />
 <link rel="dns-prefetch" href="//ajax.googleapis.com">
 <link rel="shortcut icon" href="https://d2ddoduugvun08.cloudfront.net/items/2z3e2m27022W2C2Z0q2p/dirtylook_ico.ico" />
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
