--- a/public/follow.html
+++ b/public/follow.html
@@ -26,9 +26,9 @@
 <meta property="og:title" content="Dirty Look | Follow" />
 <meta property="og:description" content="A band in San Francisco" />
 <meta property="og:url" content="http://www.dirtylooksf.com/follow" />
-<meta property="og:site_name" content="Dirty Look" />
+<meta property="og:site_name" content="Dirty Look | Follow" />
 <link rel='dns-prefetch' href='//s.w.org' />
-<link rel="alternate" hreflang="x-default" href="http://www.dirtylooksf.com/" />
+<link rel="alternate" hreflang="x-default" href="http://www.dirtylooksf.com/follow" />
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
 <style>
 html {
