--- a/public/error.html
+++ b/public/error.html
@@ -1,1 +1,142 @@
-nope nope nope
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js no-pass-type ie6 oldie" id="unsupported" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js no-pass-type ie7 oldie" id="unsupported" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js no-pass-type ie8 oldie" id="unsupported" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if IE 9]>    <html class="no-js no-pass-type ie9" lang="en-US" prefix="og: http://ogp.me/ns#"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
+<head>
+<title>Dirty Look | Error</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta charset="UTF-8" />
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="ozGOEGTko4G8SKQHeYWScmjc6zAgERd6DQKDc1x4c1U" />
+<link rel="dns-prefetch" href="//ajax.googleapis.com">
+<link rel="shortcut icon" href="https://d2ddoduugvun08.cloudfront.net/items/2z3e2m27022W2C2Z0q2p/dirtylook_ico.ico" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<link rel="apple-touch-icon-precomposed" href="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg">
+<meta property="og:image" content="https://d2ddoduugvun08.cloudfront.net/items/3y1Y3G2f3g0B470J2w19/dirtylook_logo.jpg" />
+<meta category="og:category" content="" />
+<meta name="description" content="A band in San Francisco." />
+<link rel="canonical" href="http://www.dirtylooksf.com/error" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="Dirty Look | Error" />
+<meta property="og:description" content="A band in San Francisco" />
+<meta property="og:url" content="http://www.dirtylooksf.com/error" />
+<meta property="og:site_name" content="Dirty Look | Error" />
+<link rel='dns-prefetch' href='//s.w.org' />
+<link rel="alternate" hreflang="x-default" href="http://www.dirtylooksf.com/error" />
+<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+<style>
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+body {
+  height: 100%;
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  background-image: url('https://d2ddoduugvun08.cloudfront.net/items/031O240u0x2o1D3t2V2r/dirtylook@2x.png');
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: top center;
+  height: 400px;
+  margin: 0 auto;
+  display: block;
+  text-indent: -9999px;
+}
+h1.reverse-it {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  transform: rotate(180deg);
+}
+@-webkit-keyframes look-a-distraction {
+  0%   { background-color: #7a1617; }
+  10% { background-color: #ae2e24; }
+  20% { background-color: #7a1617; }
+}
+@-moz-keyframes look-a-distraction {
+  0%   { background-color: #7a1617; }
+  10% { background-color: #ae2e24; }
+  20% { background-color: #7a1617; }
+}
+@-o-keyframes look-a-distraction {
+  0%   { background-color: #7a1617; }
+  10% { background-color: #ae2e24; }
+  20% { background-color: #7a1617; }
+}
+@keyframes look-a-distraction {
+  0%   { background-color: #7a1617; }
+  10% { background-color: #ae2e24; }
+  20% { background-color: #7a1617; }
+}
+.menu-top {
+  position: fixed;
+  top: 0;
+}
+.menu-bottom {
+  position: fixed;
+  bottom: 0;
+}
+.pure-menu {
+  text-align: center;
+  width: 100%;
+}
+a.pure-menu-link {
+  background-color: #7a1617;
+  color: #fff;
+}
+a.link-animate {
+  -webkit-animation: look-a-distraction 1s infinite; /* Safari 4+ */
+  -moz-animation:    look-a-distraction 1s infinite; /* Fx 5+ */
+  -o-animation:      look-a-distraction 1s infinite; /* Opera 12+ */
+  animation:         look-a-distraction 1s infinite; /* IE 10+, Fx 29+ */
+}
+a.pure-menu-link:hover {
+  background-color: #ae2e24;
+}
+a.nope {
+  background-color: transparent;
+  -webkit-animation: look-a-distraction 2s infinite; /* Safari 4+ */
+  -moz-animation:    look-a-distraction 2s infinite; /* Fx 5+ */
+  -o-animation:      look-a-distraction 2s infinite; /* Opera 12+ */
+  animation:         look-a-distraction 2s infinite; /* IE 10+, Fx 29+ */
+}
+p.contents {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto 0;
+}
+</style>
+</head>
+<body data-useragent class="lang-en responsive " lang="en-US">
+  <p class="contents">
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/>
+    NOPE.<br/>NOPE.<br/>NOPE.<br/></p>
+  <footer>
+    <div class="menu-top pure-menu pure-menu-horizontal">
+      <ul class="pure-menu-list">
+          <li class="pure-menu-item"><a href="/" class="pure-menu-link nope">go back, dummy...</a></li>
+      </ul>
+    </div>
+  </footer>
+  <h1 class="reverse-it">Dirty Look</h1>
+</body>
+</html>
