--- a/public/live.html
+++ b/public/live.html
@@ -32,6 +32,7 @@
 <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
 <style>
 html {
+  background: #090422;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -43,7 +44,7 @@ body {
   padding: 0;
 }
 h1 {
-  background-image: url('https://d2ddoduugvun08.cloudfront.net/items/031O240u0x2o1D3t2V2r/dirtylook@2x.png');
+  background-image: url('https://d2ddoduugvun08.cloudfront.net/items/3d01093V3Q2G2f0T1O1e/dirty-look-neon.jpg');
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position: top center;
@@ -53,24 +54,24 @@ h1 {
   text-indent: -9999px;
 }
 @-webkit-keyframes look-a-distraction {
-  0%   { background-color: #7a1617; }
-  10% { background-color: #ae2e24; }
-  20% { background-color: #7a1617; }
+  0%   { background-color: #ff4871; }
+  10% { background-color: #090422; }
+  20% { background-color: #ff4871; }
 }
 @-moz-keyframes look-a-distraction {
-  0%   { background-color: #7a1617; }
-  10% { background-color: #ae2e24; }
-  20% { background-color: #7a1617; }
+  0%   { background-color: #ff4871; }
+  10% { background-color: #090422; }
+  20% { background-color: #ff4871; }
 }
 @-o-keyframes look-a-distraction {
-  0%   { background-color: #7a1617; }
-  10% { background-color: #ae2e24; }
-  20% { background-color: #7a1617; }
+  0%   { background-color: #ff4871; }
+  10% { background-color: #090422; }
+  20% { background-color: #ff4871; }
 }
 @keyframes look-a-distraction {
-  0%   { background-color: #7a1617; }
-  10% { background-color: #ae2e24; }
-  20% { background-color: #7a1617; }
+  0%   { background-color: #ff4871; }
+  10% { background-color: #090422; }
+  20% { background-color: #ff4871; }
 }
 .menu-top {
   position: fixed;
@@ -85,7 +86,7 @@ h1 {
   width: 100%;
 }
 a.pure-menu-link {
-  background-color: #7a1617;
+  background-color: #ff4871;
   color: #fff;
 }
 a.link-animate {
@@ -95,7 +96,7 @@ a.link-animate {
   animation:         look-a-distraction 1s infinite; /* IE 10+, Fx 29+ */
 }
 a.pure-menu-link:hover {
-  background-color: #ae2e24;
+  background-color: #090422;
 }
 a.nope {
   background-color: transparent;
@@ -122,8 +123,10 @@ p.contents {
     </ul>
   </div>
   <p class="contents">
-    <img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/442K431m1n270f2v4043/dirtylookposter@2x.png"/>
-    <br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/0u3s2A160q2d0N2l0D0x/66436182_637645960042893_825150701750452224_n.png?X-CloudApp-Visitor-Id=2634976"/><br/>@ <a href="https://www.facebook.com/events/632036117270544/">Milk Bar SF July 24 2019 09:00PM</a></p>
+    <a style="color:#ff4871;" href="https://www.facebook.com/events/632036117270544/">
+      @ Milk Bar SF July 24 2019 09:00PM<br/><br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/3c28010A392p3e0S0A14/dirty-look-poster.jpg"/><br/>
+    <br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/0u3s2A160q2d0N2l0D0x/66436182_637645960042893_825150701750452224_n.png"/><br/><br/></a>
+  </p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
