--- a/public/error.html
+++ b/public/error.html
@@ -41,7 +41,9 @@ body {
   height: 100%;
   font-size: 12px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 150px;
+  color: #fff;
+  text-align: center;
 }
 h1 {
   background-image: url('https://d2ddoduugvun08.cloudfront.net/items/3d01093V3Q2G2f0T1O1e/dirty-look-neon.jpg');
@@ -131,6 +133,7 @@ p.contents {
     NOPE.<br/>NOPE.<br/>NOPE.<br/>
     NOPE.<br/>NOPE.<br/>NOPE.<br/>
     NOPE.<br/>NOPE.<br/>NOPE.<br/></p>
+  <p>&copy; 2019 don't be a dick, mate</p>
   <footer>
     <div class="menu-top pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
