--- a/public/look.html
+++ b/public/look.html
@@ -41,7 +41,9 @@ body {
   height: 100%;
   font-size: 12px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 150px;
+  color: #fff;
+  text-align: center;
 }
 h1 {
   background-image: url('https://d2ddoduugvun08.cloudfront.net/items/3d01093V3Q2G2f0T1O1e/dirty-look-neon.jpg');
@@ -129,6 +131,7 @@ p.contents {
     </ul>
   </div>
   <p class="contents"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/OlZSccFX7AE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+  <p>&copy; 2019 don't be a dick, mate</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
