--- a/public/follow.html
+++ b/public/follow.html
@@ -41,7 +41,9 @@ body {
   height: 100%;
   font-size: 12px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 150px;
+  color: #fff;
+  text-align: center;
 }
 h1 {
   background-image: url('https://d2ddoduugvun08.cloudfront.net/items/3d01093V3Q2G2f0T1O1e/dirty-look-neon.jpg');
@@ -123,6 +125,7 @@ p.contents {
     </ul>
   </div>
   <p class="contents"><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FDirtyLookSF%2F&tabs=timeline&width=300&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=852739948094303" width="300" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></p>
+  <p>&copy; 2019 don't be a dick, mate</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
