--- a/public/live.html
+++ b/public/live.html
@@ -41,7 +41,9 @@ body {
   height: 100%;
   font-size: 12px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 150px;
+  color: #fff;
+  text-align: center;
 }
 h1 {
   background-image: url('https://d2ddoduugvun08.cloudfront.net/items/3d01093V3Q2G2f0T1O1e/dirty-look-neon.jpg');
@@ -127,6 +129,7 @@ p.contents {
       @ Milk Bar SF July 24 2019 09:00PM<br/><br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/3c28010A392p3e0S0A14/dirty-look-poster.jpg"/><br/>
     <br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/0u3s2A160q2d0N2l0D0x/66436182_637645960042893_825150701750452224_n.png"/><br/><br/></a>
   </p>
+  <p>&copy; 2019 don't be a dick, mate</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
