--- a/public/listen.html
+++ b/public/listen.html
@@ -41,7 +41,9 @@ body {
   height: 100%;
   font-size: 12px;
   margin: 0;
-  padding: 0;
+  padding: 0 0 150px;
+  color: #fff;
+  text-align: center;
 }
 h1 {
   background-image: url('https://d2ddoduugvun08.cloudfront.net/items/3d01093V3Q2G2f0T1O1e/dirty-look-neon.jpg');
@@ -117,6 +119,7 @@ p.contents {
     height: 126px; 
   }
 }
+
 </style>
 </head>
 <body data-useragent class="lang-en responsive " lang="en-US">
@@ -129,7 +132,7 @@ p.contents {
     </ul>
   </div>
   <p class="contents"><iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/325231781&color=%23ff4871&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></p>
-
+  <p>&copy; 2019 don't be a dick, mate</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
