--- a/public/listen.html
+++ b/public/listen.html
@@ -131,7 +131,9 @@ p.contents {
         <li class="pure-menu-item"><a href="/live" class="pure-menu-link link-animate">LIVE</a></li>
     </ul>
   </div>
-  <p class="contents"><iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/325231781&color=%23ff4871&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></p>
+  <p class="contents">
+    <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/826665227&color=%23ff4871&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/325231781&color=%23ff4871&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></p>
   <p>&copy; 2019 don't be a dick, mate</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
