--- a/public/live.html
+++ b/public/live.html
@@ -125,11 +125,11 @@ p.contents {
     </ul>
   </div>
   <p class="contents">
+    Past Event
     <a style="color:#ff4871;" href="https://www.facebook.com/events/632036117270544/">
-      @ Milk Bar SF July 24 2019 09:00PM<br/><br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/3c28010A392p3e0S0A14/dirty-look-poster.jpg"/><br/>
-    <br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/0u3s2A160q2d0N2l0D0x/66436182_637645960042893_825150701750452224_n.png"/><br/><br/></a>
+      @ Milk Bar SF July 24 2019 09:00PM<br/><br/><img width="250px" src="https://d2ddoduugvun08.cloudfront.net/items/3c28010A392p3e0S0A14/dirty-look-poster.jpg"/><br/><br/><br/></a>
   </p>
-  <p>&copy; 2019 don't be a dick, mate</p>
+  <p>&copy; 2019</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
