--- a/public/follow.html
+++ b/public/follow.html
@@ -125,7 +125,7 @@ p.contents {
     </ul>
   </div>
   <p class="contents"><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FDirtyLookSF%2F&tabs=timeline&width=300&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=852739948094303" width="300" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></p>
-  <p>&copy; 2019 don't be a dick, mate</p>
+  <p>&copy; 2020</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
