--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@ a.nope {
         <li class="pure-menu-item"><a href="/live" class="pure-menu-link link-animate">LIVE</a></li>
     </ul>
   </div>
-  <p>&copy; 2019 don't be a dick, mate</p>
+  <p>&copy; 2020</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
