--- a/public/listen.html
+++ b/public/listen.html
@@ -133,7 +133,7 @@ p.contents {
   </div>
   <p class="contents">
     <iframe width="100%" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/826665227&color=%23ff4871&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-  <p>&copy; 2019 don't be a dick, mate</p>
+  <p>&copy; 2020</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
