--- a/public/look.html
+++ b/public/look.html
@@ -131,7 +131,7 @@ p.contents {
     </ul>
   </div>
   <p class="contents"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/OlZSccFX7AE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-  <p>&copy; 2019 don't be a dick, mate</p>
+  <p>&copy; 2020</p>
   <footer>
     <div class="menu-bottom pure-menu pure-menu-horizontal">
       <ul class="pure-menu-list">
